Multistep landing page: fix horizontal scroll on Safari

--- a/src/sass/non-embed-multistep.scss
+++ b/src/sass/non-embed-multistep.scss
@@ -49,13 +49,6 @@
     }
   }
 
-  .body-title,
-  .body-banner,
-  .body-top,
-  .body-main {
-    min-width: 100%;
-  }
-
   form > .en__component--advrow {
     .body-title,
     .body-title h1,
